--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -12,7 +12,6 @@ publisher = {Cambridge University Press},
 @book{bhphysics,
     title = "{Introduction to black hole physics}",
    author = {Frolov, V.~P. and Zelnikov, A.},
-   editor = {Zelnikov, Andrei},
   address = {Oxford ; New York},
 publisher = {Oxford University Press},
      year = {2011},
@@ -36,9 +35,16 @@ publisher = {Princeton University Press},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@book{gravwaves,
+title = "{Gravitational waves. Volume 1, Theory and experiments}",
+author = {{Maggiore}, M.},
+publisher = {Oxford University Press},
+year = {2008},
+}
+
 @book{tame,
 title = "{Johdatus taivaanmekaniikkaan}",
-author = {Karttunen, H.},
+author = {{Karttunen}, H.},
 address = {Helsinki},
 publisher = {Tähtitieteellinen yhdistys Ursa},
 year = {1987},
@@ -46,16 +52,42 @@ year = {1987},
 
 @MISC{ad,
 title = "{Astrodynamiikka}",
-author = {Mikkola, S.},
+author = {{Mikkola}, S.},
 year = {2016},
 note = {Lecture handout},
 }
 
 @MISC{diplomarbeit,
 title = "{Interaction of Stars with Black Holes in the Centers of Galaxies - Combining a Tree-Code with Chain Regularization}",
-author = {Karl, S.},
+author = {{Karl}, S.},
 year = {2007},
 note = {Degree dissertation},
+}
+
+@article{will:2014,
+  title = "{Incorporating post-Newtonian effects in N-body dynamics}",
+  author = {{Will}, C.~M.},
+  journal = {Phys. Rev. D},
+  volume = {89},
+  issue = {4},
+  numpages = {14},
+  year = {2014},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevD.89.044043},
+  url = {https://link.aps.org/doi/10.1103/PhysRevD.89.044043}
+}
+
+@ARTICLE{einstein:1938,
+   author = {{Einstein}, A. and {Infeld}, L. and {Hoffmann}, B.},
+    title = "{The Gravitational Equations and the Problem of Motion}",
+  journal = {Annals of Mathematics},
+     year = 1938,
+    month = jan,
+   volume = 39,
+    pages = {65-100},
+   adsurl = {http://adsabs.harvard.edu/abs/1938AnMat..39...65E},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @article{levi-civita:1920,
@@ -125,7 +157,7 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{haring:2004,
-   author = {{Häring}, N. and {Rix}, H.-W.},
+   author = {{Häring}, N. and {Rix}, H.~W.},
     title = "{On the Black Hole Mass-Bulge Mass Relation}",
   journal = {ApJ},
    eprint = {astro-ph/0402376},
